--- a/src/Soenneker.Libraries.NuGet.csproj
+++ b/src/Soenneker.Libraries.NuGet.csproj
@@ -39,6 +39,6 @@
         <None Include="..\README.md" Pack="true" PackagePath="\" />
         <None Include="..\LICENSE" Pack="true" PackagePath="\" />
         <None Include="..\icon.png" Pack="true" PackagePath="\" />
-        <Content Include="Resources\nuget.exe" Pack="true" PackageCopyToOutput="true">
+        <Content Include="Resources\nuget.exe" Pack="true" PackageCopyToOutput="true"></Content>
     </ItemGroup>
 </Project>
