--- a/test/Soenneker.Libraries.NuGet.Tests/Soenneker.Libraries.NuGet.Tests.csproj
+++ b/test/Soenneker.Libraries.NuGet.Tests/Soenneker.Libraries.NuGet.Tests.csproj
@@ -20,7 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\src\Soenneker.Libraries.NuGet.csproj" />
+        <ProjectReference Include="..\..\src\Soenneker.Libraries.NuGet.csproj" />
     </ItemGroup>
 
 </Project>
