--- a/src/Soenneker.Libraries.NuGet.csproj
+++ b/src/Soenneker.Libraries.NuGet.csproj
@@ -1,4 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8"?><Project Sdk="Microsoft.NET.Sdk">
+﻿<?xml version="1.0" encoding="utf-8"?>
+
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net10.0</TargetFramework>
@@ -32,12 +34,18 @@
         <LangVersion>latest</LangVersion>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageIcon>icon.png</PackageIcon>
-    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild></PropertyGroup>
+        <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+    </PropertyGroup>
 
     <ItemGroup>
         <None Include="..\README.md" Pack="true" PackagePath="\" />
         <None Include="..\LICENSE" Pack="true" PackagePath="\" />
         <None Include="..\icon.png" Pack="true" PackagePath="\" />
-        <Content Include="Resources\nuget.exe" Pack="true" PackageCopyToOutput="true"></Content>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Content Include="Resources\nuget.exe" Pack="true" PackageCopyToOutput="true"
+                 ContentTargetFolders="contentFiles">
+        </Content>
     </ItemGroup>
 </Project>
